--- a/pages/blog-detalis.html
+++ b/pages/blog-detalis.html
@@ -275,7 +275,7 @@
                       placeholder="Your Name*"
                     />
                     <input
-                      class="p-1 w-50 form-control ms-3 mt-2"
+                      class="p-1 w-50 form-control ms-3 "
                       type="email"
                       name="email"
                       placeholder="Your Email*"
