--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
     <!-- ======= END OF header Section ======= -->
     <!-- ======= about Section ======= -->
     <section id="about" class="about pt-5 bg-body-secondary">
-      <div class="container pt-4 pb-5">
+      <div class="container-lg container-md container-sm pt-4 pb-5">
         <div class="row bg-white pt-5 pb-5 shadow p">
-          <div class="col-md-12 col-lg-6 ps-5 col-sm-12">
+          <div class="col-md-12 col-lg-6 ps-lg-5 col-sm-12">
             <div class="row d-flex g-4 container">
               <div class="col-md-5">
                 <img
@@ -209,7 +209,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-12 col-lg-6 col-sm-12">
+          <div class="col-md-12 col-lg-6 col-sm-12 ">
             <h5 class="position-relative">About Me</h5>
             <p class="lead pt-4 text-light-emphasis">
               Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.
@@ -237,8 +237,8 @@
     <!-- ======= services Section ======= -->
     <section id="SERVICES" class="SERVICES pt-5 pb-5 bg-body-secondary">
       <div class="row">
-        <div class="col-md-12">
-          <div class="title-box text-center container">
+        <div class="col-md-12 ">
+          <div class="title-box text-center container  ">
             <h3 class="title-a pt-5">Services</h3>
             <p class="subtitle-a text-light-emphasis">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -247,9 +247,9 @@
           </div>
         </div>
       </div>
-      <div class="container pt-4">
+      <div class="container-lg container-md container-sm pt-4">
         <div class="row g-5">
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="service-box text-center p-4 rounded bg-white shadow p">
               <div class="service-ico pt-2">
                 <span class="ico-circle">
@@ -270,7 +270,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="service-box text-center bg-white shadow p p-4 rounded">
               <div class="service-ico pt-2">
                 <span class="ico-circle">
@@ -291,7 +291,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="service-box text-center bg-white shadow p p-4 rounded">
               <div class="service-ico pt-2">
                 <span class="ico-circle">
@@ -312,7 +312,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="service-box text-center bg-white shadow p p-4 rounded">
               <div class="service-ico pt-2">
                 <span class="ico-circle">
@@ -333,7 +333,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="service-box text-center bg-white shadow p p-4 rounded">
               <div class="service-ico pt-2">
                 <span class="ico-circle">
@@ -708,7 +708,8 @@
       </div>
     </section>     -->
 
- <section id="slider" class="slider carousel-vip-p py-5">
+
+    <section id="slider" class="slider carousel-vip-p py-5">
       <div class="overlay-mf"></div>
      
         <div id="carouselExampleIndicators" class="carousel slide py-5 my-4">
@@ -937,3 +938,4 @@
     <script src="java-script/bootstrap.bundle.min.js"></script>
   </body>
 </html>
+
