--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-     <meta charset="UTF-8" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/all.min.css" />
@@ -12,8 +12,9 @@
     />
   </head>
   <body>
+
     <nav
-    class="navbar navbar-expand-lg bg-body-tertiary nav-spicial position-fixed  w-100"
+    class="navbar navbar-expand-lg bg-body-tertiary nav-spicial fixed-top"
   >
     <div class="container mt-1">
       <a class="navbar-brand nav-brand-spe" href="#">DevFolio</a>
@@ -65,10 +66,11 @@
             </a>
             <ul class="dropdown-menu rounded-0">
               <li><a class="dropdown-item" href="#">Action</a></li>
+             
               <li>
                 <a class="dropdown-item" href="#">deep droped </a>
               </li>
-              <li class="dropdown deep-drop-down">
+             <li class="dropdown deep-drop-down">
                 <a class="dropdown-item" href="#"
                   ><span>Deep Drop Down</span>
                 </a>
@@ -82,7 +84,7 @@
                   </div>
                  
                 </ul>
-              </li>
+              </li> 
 
               <li>
                 <a class="dropdown-item text-dark" href="#">Action</a>
@@ -109,7 +111,7 @@
     </div>
   </nav>
     <!-- ======= header Section ======= -->
-    <header id="home" class="home vh-100">
+    <section id="home" class="home vh-100">
       <div class="home-layer bg-opacity-50 bg-black vh-100"></div>
 
       <div class="container ">
@@ -123,7 +125,7 @@
           </div>
         </div>
       </div>
-    </header>
+    </section>
     <!-- ======= END OF header Section ======= -->
     <!-- ======= about Section ======= -->
     <section id="about" class="about pt-5 bg-body-secondary">
@@ -237,15 +239,17 @@
     </section>
     <!-- ======= END OF about Section ======= -->
     <!-- ======= services Section ======= -->
-    <section id="SERVICES" class="SERVICES pt-5 pb-5 bg-body-secondary">
-      <div class="row">
-        <div class="col-md-12 ">
-          <div class="title-box text-center container  ">
-            <h3 class="title-a pt-5">Services</h3>
-            <p class="subtitle-a text-light-emphasis">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-            </p>
-            <div class="line-mf"></div>
+    <section id="SERVICES" class="SERVICES bg-body-secondary my-1 p-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 ">
+            <div class="title-box text-center container  ">
+              <h3 class="title-a pt-5">Services</h3>
+              <p class="subtitle-a text-light-emphasis">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              </p>
+              <div class="line-mf"></div>
+            </div>
           </div>
         </div>
       </div>
@@ -476,14 +480,16 @@
     <!-- ======= END OF Counter Section ======= -->
     <!-- ======= PORTFOLIO Section ======= -->
     <section id="PORTFOLIO" class="PORTFOLIO bg-body-secondary">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="title-box text-center container">
-            <h3 class="title-a pt-5">PORTFOLIO</h3>
-            <p class="subtitle-a text-light-emphasis">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-            </p>
-            <div class="line-mf"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="title-box text-center container">
+              <h3 class="title-a pt-5">PORTFOLIO</h3>
+              <p class="subtitle-a text-light-emphasis">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              </p>
+              <div class="line-mf"></div>
+            </div>
           </div>
         </div>
       </div>
@@ -674,7 +680,7 @@
         </div>
       </div>
     </section>
-      <!-- ======= end PORTFOLIO Section ======= -->
+      <!-- ======= end PORTFOLIO Section =======
        <!-- =======SLIDER  Section ======= -->
     <!-- by using transpernt photo tare2ty ana w ms as7 haga el 2 slider byd5lo fe b3d bssbb el active el taht a3tqd !!!!!!!!!!!!
       <section id="slider" class="slider">
@@ -940,4 +946,3 @@
     <script src="java-script/bootstrap.bundle.min.js"></script>
   </body>
 </html>
-
