--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     </section>
     <!-- ======= END OF about Section ======= -->
     <!-- ======= services Section ======= -->
-    <section id="SERVICES" class="SERVICES bg-body-secondary my-1 p-4">
+    <section id="SERVICES" class="SERVICES bg-body-secondary  p-4">
       <div class="container">
         <div class="row">
           <div class="col-md-12 ">
